<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_service_list"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/service_list"/>
        <item
            android:id="@+id/nav_bills"
            android:icon="@drawable/receipt"
            android:title="@string/bills"/>
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="Tools"/>
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info_black_24dp"
                android:title="@string/title_activity_about"/>
        </menu>
    </item>

</menu>
